# mlir

./: CMakeLists.txt  README.md
bindings/python/: pybind.cpp
examples/Linalg/Linalg3/: CMakeLists.txt
examples/toy/: CMakeLists.txt  README.md
examples/toy/Ch3/: CMakeLists.txt  toyc.cpp
examples/toy/Ch4/: CMakeLists.txt  toyc.cpp
examples/toy/Ch4/include/: ShapeInferencePass.h
examples/toy/Ch4/include/toy/: Dialect.h  Ops.td  Passes.h
examples/toy/Ch4/mlir/: DeadFunctionEliminationPass.cpp  Dialect.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
g3doc/: ConversionToLLVMDialect.md  DeclarativeRewrites.md  DeveloperGuide.md  LangRef.md  OpDefinitions.md  WritingAPass.md
g3doc/Dialects/: Standard.md
g3doc/Tutorials/Toy/: Ch-1.md  Ch-2.md  Ch-3.md  Ch-4.md  Ch-5.md
include/mlir/: CMakeLists.txt
include/mlir-c/: Core.h
include/mlir/Analysis/: AffineStructures.h  CMakeLists.txt  Dominance.h  Liveness.h  LoopAnalysis.h  Utils.h  VectorAnalysis.h
include/mlir/Conversion/: CMakeLists.txt
include/mlir/Conversion/GPUToROCDL/: GPUToROCDLPass.h
include/mlir/Conversion/GPUToROCM/: CMakeLists.txt  GPUToROCMPass.h  ROCMConfig.h.in
include/mlir/Conversion/StandardToLLVM/: ConvertStandardToLLVM.h
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/AffineOps/: AffineOps.h  AffineOps.td  CMakeLists.txt
include/mlir/Dialect/LLVMIR/: CMakeLists.txt  LLVMDialect.h  LLVMOps.td
include/mlir/Dialect/Linalg/IR/: LinalgLibraryOps.td  LinalgOps.td  LinalgTraits.h
include/mlir/Dialect/Linalg/Transforms/: LinalgTransforms.h
include/mlir/Dialect/Linalg/Utils/: Utils.h
include/mlir/Dialect/LoopOps/: LoopOps.h
include/mlir/Dialect/OpenMP/: CMakeLists.txt  OpenMPDialect.h  OpenMPOps.td
include/mlir/Dialect/SPIRV/: Passes.h  SPIRVBase.td  SPIRVControlFlowOps.td  SPIRVOps.td  SPIRVStructureOps.td
include/mlir/Dialect/StandardOps/: CMakeLists.txt  Ops.h  Ops.td
include/mlir/Dialect/Utils/: StructuredOpsUtils.h
include/mlir/Dialect/VectorOps/: VectorOps.td
include/mlir/EDSC/: Helpers.h  Intrinsics.h
include/mlir/ExecutionEngine/: ExecutionEngine.h  OptUtils.h
include/mlir/IR/: AffineMap.h  Builders.h  DialectImplementation.h  Module.h  OpBase.td  OpDefinition.h  OpImplementation.h  Operation.h  PatternMatch.h  StandardTypes.h  TypeSupport.h
include/mlir/LLVMIR/: CMakeLists.txt  LLVMOps.td  ROCDLDialect.h  ROCDLOps.td
include/mlir/Pass/: AnalysisManager.h  CMakeLists.txt
include/mlir/SPIRV/: SPIRVBase.td  SPIRVOps.td
include/mlir/StandardOps/: Ops.td
include/mlir/TableGen/: Pattern.h  Predicate.h
include/mlir/Transforms/: CMakeLists.txt  DialectConversion.h  LoopLikeInterface.h  LoopLikeInterface.td  Passes.h  Utils.h
lib/AffineOps/: AffineOps.cpp
lib/Analysis/: AffineStructures.cpp  CMakeLists.txt  Dominance.cpp  Liveness.cpp  LoopAnalysis.cpp  Utils.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/AffineToStandard/: AffineToStandard.cpp
lib/Conversion/GPUCommon/: IndexIntrinsicsOpLowering.h
lib/Conversion/GPUToCUDA/: ConvertKernelFuncToCubin.cpp
lib/Conversion/GPUToNVVM/: CMakeLists.txt  LowerGpuOpsToNVVMOps.cpp
lib/Conversion/GPUToROCDL/: LowerGpuOpsToROCDLOps.cpp
lib/Conversion/GPUToROCM/: CMakeLists.txt  ConvertKernelFuncToHSACO.cpp  ConvertLaunchFuncToHIPCalls.cpp  GenerateHSACOAccessors.cpp
lib/Conversion/GPUToSPIRV/: ConvertGPUToSPIRV.cpp  ConvertGPUToSPIRVPass.cpp
lib/Conversion/LinalgToLLVM/: LinalgToLLVM.cpp
lib/Conversion/StandardToLLVM/: ConvertStandardToLLVM.cpp
lib/Dialect/Linalg/: CMakeLists.txt
lib/Dialect/Linalg/Analysis/: DependenceAnalysis.cpp
lib/Dialect/Linalg/IR/: LinalgOps.cpp
lib/Dialect/Linalg/Transforms/: LinalgTransforms.cpp  LowerToLLVMDialect.cpp  Promotion.cpp  Tiling.cpp
lib/Dialect/LoopOps/: CMakeLists.txt  LoopOps.cpp
lib/EDSC/: Builders.cpp  CoreAPIs.cpp  Helpers.cpp
lib/ExecutionEngine/: CMakeLists.txt  ExecutionEngine.cpp  MemRefUtils.cpp  OptUtils.cpp
lib/IR/: AffineExpr.cpp  AffineMap.cpp  AsmPrinter.cpp  Attributes.cpp  Builders.cpp  Diagnostics.cpp  MLIRContext.cpp  Operation.cpp  PatternMatch.cpp  StandardTypes.cpp  SymbolTable.cpp  TypeDetail.h
lib/LLVMIR/: CMakeLists.txt
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Pass/: CMakeLists.txt  Pass.cpp  PassTiming.cpp
lib/Quantizer/: CMakeLists.txt
lib/SPIRV/: SPIRVOps.cpp  SPIRVTypes.cpp
lib/StandardOps/: Ops.cpp
lib/Support/: CMakeLists.txt  JitRunner.cpp
lib/Transforms/: AffineDataCopyGeneration.cpp  AffineLoopInvariantCodeMotion.cpp  CMakeLists.txt  DialectConversion.cpp  Inliner.cpp  LoopFusion.cpp  LoopInvariantCodeMotion.cpp  MaterializeVectors.cpp  MemRefDataFlowOpt.cpp  PipelineDataTransfer.cpp  SimplifyAffineStructures.cpp  Vectorize.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/AffineOps/: load-store.mlir
test/Analysis/: test-liveness.mlir
test/EDSC/: builder-api-test.cpp
test/IR/: affine-map.mlir  core-ops.mlir  invalid-ops.mlir  invalid.mlir  load-store.mlir  parser.mlir  traits.mlir
test/LLVMIR/: convert-memref-ops.mlir  convert-to-llvmir.mlir  rocdl.mlir
test/SPIRV/: ops.mlir
test/Transforms/: affine-data-copy.mlir  affine-loop-invariant-code-motion.mlir  loop-fusion.mlir  loop-invariant-code-motion.mlir  lower-affine.mlir  pipeline-data-transfer.mlir  simplify-affine-structures.mlir  test-legalizer.mlir  test-remapped-value.mlir
test/mlir-cpu-runner/: mlir_runner_utils.cpp  simple.mlir  unranked_memref.mlir  utils.mlir
test/mlir-cuda-runner/: gpu-to-cubin.mlir
test/mlir-rocm-runner/: gpu-to-hsaco.mlir
tools/: CMakeLists.txt
tools/mlir-cpu-runner/: CMakeLists.txt
tools/mlir-cuda-runner/: CMakeLists.txt  cuda-runtime-wrappers.cpp
tools/mlir-opt/: CMakeLists.txt
tools/mlir-rocm-runner/: CMakeLists.txt  hip-runtime-wrappers.cpp  mlir-rocm-runner.cpp
tools/mlir-tblgen/: CMakeLists.txt  OpInterfacesGen.cpp
tools/mlir-translate/: CMakeLists.txt
tools/mlir-vulkan-runner/: CMakeLists.txt  VulkanRuntime.cpp
unittests/IR/: DialectTest.cpp
unittests/TableGen/: structs.td
utils/spirv/: gen_spirv_dialect.py
(+90 files in other folders)
