add_subdirectory(AffineOps)
add_subdirectory(FxpMathOps)
add_subdirectory(GPU)
add_subdirectory(Linalg)
add_subdirectory(LLVMIR)
add_subdirectory(LoopOps)
add_subdirectory(QuantOps)
add_subdirectory(SPIRV)
add_subdirectory(StandardOps)
add_subdirectory(VectorOps)

install(DIRECTORY AffineOps DESTINATION include/mlir/Dialect PATTERN "*.h")
install(DIRECTORY LLVMIR DESTINATION include/mlir/Dialect PATTERN "*.h")
install(DIRECTORY StandardOps DESTINATION include/mlir/Dialect PATTERN "*.h")

