set(LLVM_TARGET_DEFINITIONS LLVMOps.td)
mlir_tablegen(LLVMOps.h.inc -gen-op-decls)
mlir_tablegen(LLVMOps.cpp.inc -gen-op-defs)
mlir_tablegen(LLVMOpsEnums.h.inc -gen-enum-decls)
mlir_tablegen(LLVMOpsEnums.cpp.inc -gen-enum-defs)
add_public_tablegen_target(MLIRLLVMOpsIncGen)
set(LLVM_TARGET_DEFINITIONS NVVMOps.td)
mlir_tablegen(NVVMOps.h.inc -gen-op-decls)
mlir_tablegen(NVVMOps.cpp.inc -gen-op-defs)
add_public_tablegen_target(MLIRNVVMOpsIncGen)
set(LLVM_TARGET_DEFINITIONS ROCDLOps.td)
mlir_tablegen(ROCDLOps.h.inc -gen-op-decls)
mlir_tablegen(ROCDLOps.cpp.inc -gen-op-defs)
add_public_tablegen_target(MLIRROCDLOpsIncGen)
set(LLVM_TARGET_DEFINITIONS LLVMOps.td)
mlir_tablegen(LLVMConversions.inc -gen-llvmir-conversions)
add_public_tablegen_target(MLIRLLVMConversionsIncGen)
set(LLVM_TARGET_DEFINITIONS NVVMOps.td)
mlir_tablegen(NVVMConversions.inc -gen-llvmir-conversions)
add_public_tablegen_target(MLIRNVVMConversionsIncGen)
set(LLVM_TARGET_DEFINITIONS ROCDLOps.td)
mlir_tablegen(ROCDLConversions.inc -gen-llvmir-conversions)
add_public_tablegen_target(MLIRROCDLConversionsIncGen)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LLVMOps.h.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LLVMOps.cpp.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LLVMOpsEnums.h.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LLVMOpsEnums.cpp.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/NVVMOps.h.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/NVVMOps.cpp.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ROCDLOps.h.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ROCDLOps.cpp.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/LLVMConversions.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/NVVMConversions.inc DESTINATION include/mlir/Dialect/LLVMIR)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ROCDLConversions.inc DESTINATION include/mlir/Dialect/LLVMIR)

